--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="text-primary">Halvi</span>
           </h1>
           <div class="subheading mb-5">#A3,JanaJeevaGreenWoods Apartment,Vishwapriya layout, Begur road, Bangalore·
-            <a href="mailto:name@email.com">harsha.pic@gmail@.com</a>
+            <a href="mailto:name@email.com">harsha.pic@gmail.com</a>
           </div>
           <p class="mb-5">11 years of total experience including work at Galaxe Solutions, KPIT Cummins, TCS, Cisco and Riverbed Technology. Working experience in all phases of software development starting from requirement analysis, design, development, testing, implementation and maintenance/support. Currently working as Architect for developing Service Delivery Platform</p>
           <ul class="list-inline list-social-icons mb-0">
